examples/test/testpolicy7564.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7564
  namespace: namespace409
spec:
  podSelector:
    matchLabels:
      key37: value43
      key43: value15
      key23: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value46
          key17: value49
      podSelector:
        matchLabels:
          key4: value12
          key0: value39
          key34: value31
